# poltergeist

./: .env.example  .gitignore  .release-please-manifest.json  .venv  LICENSE  README.md  pyproject.toml  release-please-config.json
.claude/skills/onboarding-poltergeist/: SKILL.md  connectors.md
.claude/skills/poltergeist-recall/: SKILL.md  using.md
.github/workflows/: announce-release.yml  ci.yml  release.yml  star-tracker.yml
.vite/vitest/: results.json
desktop/: .gitignore  .prettierignore  CHANGELOG.md  README.md  colors_and_type.css  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
desktop/scripts/: notarize.cjs
desktop/scripts/demo/: postprocess.sh  record.mjs  scenes.mjs
desktop/src/main/: api-forwarder.ts  assets.ts  chat-stream.ts  cli-shim.ts  clipboard.ts  docs-stream.ts  index.ts  jot-overlay.ts  meeting-notifier.ts  pdf-export.ts  settings.ts  sidecar.ts  updater.ts  window-state.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  index.html  main.tsx  overlay.html  styles.css
desktop/src/shared/: api-types.ts  csstype.d.ts  plugin-types.ts  settings-schema.ts  types.ts
docs/: connectors.md  operations.md  release.md
docs/install/: linux.md  macos-launchd.md  windows.md
docs/superpowers/mockups/: brain-constellation.html
docs/superpowers/plans/: 2026-05-15-poltergeist-jots.md  2026-05-25-meeting-prep.md  2026-06-04-microsoft-365-connector.md  2026-06-09-poltergeist-mcp-server.md  2026-06-09-rich-markdown-editor.md  2026-06-10-activity-heatmap.md  2026-06-10-atlassian-import.md  2026-06-10-jot-docs-assistant.md  2026-06-10-poltergeist-chat.md  2026-06-10-projects-and-chat-export.md  2026-06-18-in-app-microsoft-auth.md  2026-06-24-jots-overhaul.md  2026-07-01-chat-file-attachments-slice1-text.md  2026-07-01-chat-file-attachments-slice2-docs.md  2026-07-01-chat-file-attachments-slice3-images.md  2026-07-01-in-chat-doc-generation.md  2026-07-06-atlassian-import-plugin.md  2026-07-06-brain-constellation.md  2026-07-06-plugin-system.md  2026-07-07-connector-onboarding.md  2026-07-08-familiar-chief-of-staff-plugin.md  2026-07-14-one-click-install.md
docs/superpowers/specs/: 2026-05-14-poltergeist-jots-design.md  2026-05-25-meeting-prep-design.md  2026-06-04-microsoft-365-connector-design.md  2026-06-08-poltergeist-mcp-server-design.md  2026-06-09-rich-markdown-editor-design.md  2026-06-10-activity-heatmap-design.md  2026-06-10-atlassian-import-design.md  2026-06-10-jot-docs-assistant-design.md  2026-06-10-poltergeist-chat-design.md  2026-06-10-projects-and-chat-export-design.md  2026-06-18-in-app-microsoft-auth-design.md  2026-06-24-jots-overhaul-design.md  2026-07-01-chat-file-attachments-design.md  2026-07-01-in-chat-doc-generation-design.md  2026-07-06-atlassian-import-plugin-design.md  2026-07-06-brain-constellation-design.md  2026-07-06-plugin-system-design.md  2026-07-07-connector-onboarding-design.md  2026-07-08-familiar-chief-of-staff-plugin-design.md  2026-07-14-one-click-install-design.md
ghostbrain/: __init__.py  bootstrap.py  paths.py  routing_config.py  scheduler.py  scheduler_jobs.py
ghostbrain/api/: __init__.py  __main__.py  auth.py  main.py  runtime.py
ghostbrain/api/auth/: __init__.py  disconnect.py  registry.py  session.py
ghostbrain/api/models/: __init__.py  activity.py  answer.py  capture.py  chat.py  daily.py  docs.py  graph.py  import_atlassian.py  llm.py  meeting.py  note.py  project.py  recorder.py  search.py  suggestion.py
ghostbrain/api/repo/: activity.py  agenda.py  answer.py  attachment_caption.py  attachment_extract.py  captures.py  chat.py  chat_attachments.py  chat_export.py  chat_store.py  connector_probe.py  connectors.py  daily.py  (+15 more)
ghostbrain/connectors/: __init__.py  _base.py  _relevance.py
ghostbrain/llm/: agent.py  client.py  mcp_servers.py
ghostbrain/mcp/: __init__.py  __main__.py  client.py  tools.py
ghostbrain/metrics/: anticipation.py  inverse_search.py
ghostbrain/profile/: __init__.py  apply.py  claude_md.py
ghostbrain/recorder/: __init__.py  audio_capture.py  audio_switcher.py  daemon.py  daemon_cli.py  linker.py  main.py  manual.py  policy.py  state.py  transcribe.py
ghostbrain/semantic/: __init__.py  index.py  main.py  projection.py  refresh.py  regions.py
ghostbrain/worker/: __init__.py  audit.py  digest.py  extractor.py  main.py  meeting_prep.py  note_generator.py  router.py  weekly_digest.py
metrics/: stars.csv
orchestration/: slack-manifest.yaml
orchestration/hooks/: session-end.ps1
orchestration/launchd/: com.ghostbrain.calendar.plist  com.ghostbrain.confluence.plist  com.ghostbrain.jira.plist  com.ghostbrain.recorder.plist  com.ghostbrain.semantic.plist  com.jannik.ghostbrain.claudemd.plist  com.jannik.ghostbrain.worker.plist
packaging/: sidecar.spec
plugins/familiar/: README.md  build.mjs  manifest.json  package-lock.json  package.json
scripts/: disable-launchd.sh  release.sh
spec/: SPEC.md
tests/: conftest.py  test_agent_run.py  test_agent_stream.py  test_answer_contexts.py  test_anticipation.py  test_api_main_dispatch.py  test_atlassian_base.py  test_atlassian_import_refactor.py  test_atlassian_pages.py  test_bootstrap_contexts.py  test_calendar.py  test_chat_export.py  test_chat_mcp_merge.py  test_chat_repo.py  test_chat_store.py  test_claude_md.py  test_confluence_connector.py  test_connector_base.py  test_digest.py  test_digest_contexts.py  test_docs_assist.py  test_docs_routes.py  test_export_confluence.py  test_extractor.py  test_gmail_connector.py  test_jira_connector.py  test_joplin_connector.py  test_llm_client.py  test_llm_client_image.py  test_markdown_out.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_runtime.py  test_mcp_server.py  test_mcp_servers.py  test_mcp_tools.py  test_meeting_prep.py  test_microsoft_auth.py  test_microsoft_graph_client.py  test_microsoft_interactive_auth.py  (+30 more)
website/: index.html  script.js  styles.css
website/docs/: api.html  connectors.html  index.html  privacy.html  query.html  quickstart.html  self-host.html  vault.html
(+330 files in other folders)
