[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbrain"
version = "0.1.0"
description = "Personal second-brain automation for Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jannik", email = "jannik@codeship.tech" },
]
dependencies = [
    "anthropic>=0.40.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "slack-sdk>=3.27",
    "markdownify>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
semantic = [
    "sentence-transformers>=2.7",
    "numpy>=1.26",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # Required by jaraco.context at pkg_resources runtime hook time when the
    # API is bundled by PyInstaller. Without it the packaged sidecar crashes
    # on first import.
    "backports.tarfile>=1.0",
]

[project.scripts]
ghostbrain-bootstrap = "ghostbrain.bootstrap:main"
ghostbrain-worker = "ghostbrain.worker.main:main"
ghostbrain-claude-md = "ghostbrain.profile.claude_md:main"
ghostbrain-digest = "ghostbrain.worker.digest:main"
ghostbrain-weekly-digest = "ghostbrain.worker.weekly_digest:main"
ghostbrain-github-fetch = "ghostbrain.connectors.github.__main__:main"
ghostbrain-jira-fetch = "ghostbrain.connectors.jira.__main__:main"
ghostbrain-confluence-fetch = "ghostbrain.connectors.confluence.__main__:main"
ghostbrain-profile-apply = "ghostbrain.profile.apply:main"
ghostbrain-profile-decay = "ghostbrain.profile.decay:main"
ghostbrain-calendar-fetch = "ghostbrain.connectors.calendar.__main__:main"
ghostbrain-calendar-auth = "ghostbrain.connectors.calendar.auth_cli:main"
ghostbrain-gmail-fetch = "ghostbrain.connectors.gmail.__main__:main"
ghostbrain-gmail-auth = "ghostbrain.connectors.gmail.auth_cli:main"
ghostbrain-slack-fetch = "ghostbrain.connectors.slack.__main__:main"
ghostbrain-slack-token-add = "ghostbrain.connectors.slack.token_cli:main"
ghostbrain-transcribe = "ghostbrain.recorder.main:main"
ghostbrain-recorder = "ghostbrain.recorder.daemon_cli:main"
ghostbrain-recorder-recover = "ghostbrain.recorder.recover_cli:main"
ghostbrain-metrics = "ghostbrain.metrics.main:main"
ghostbrain-semantic-refresh = "ghostbrain.semantic.main:main"

[tool.setuptools.packages.find]
include = ["ghostbrain*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "ghostbrain/api/tests"]
